no rust keywords

--- a/translations/ar.json
+++ b/translations/ar.json
@@ -49,7 +49,7 @@
   "sticky": "تدبيس",
   "unsticky": "فك التدبيس",
   "link": "الرابط",
-  "mod": "مشرِف",
+  "mod_test": "مشرِف",
   "moderates": "إشراف",
   "settings": "الإعدادات",
   "remove_as_mod": "أزله من الإشراف",
@@ -97,7 +97,7 @@
   "old": "الأقدم",
   "all": "الكل",
   "docs": "الوثائق",
-  "type": "النوع",
+  "type_test": "النوع",
   "replies": "الردود",
   "mentions": "الإشارات",
   "message_sent": "أُرسلت الرسالة",
