--- a/translations/as.json
+++ b/translations/as.json
@@ -51,7 +51,7 @@
     "strikethrough": "মাজেৰে আঁচ টানক",
     "quote": "উক্তি দিয়ক",
     "list": "তালিকা",
-    "mod": "মড্",
+    "mod_test": "মড্",
     "mods": "মড্‌সমূহ",
     "post": "প'ষ্ট কৰক",
     "create_a_post": "প'ষ্ট এটা সৃষ্টি কৰক",
