--- a/translations/bg.json
+++ b/translations/bg.json
@@ -175,7 +175,7 @@
   "quote": "цитат",
   "spoiler": "спойлър",
   "list": "Списък",
-  "mod": "модератор",
+  "mod_test": "модератор",
   "mods": "модератори",
   "moderates": "Модериращ",
   "settings": "Настройки",
@@ -237,7 +237,7 @@
   "api": "API",
   "inbox": "Входящи",
   "mark_all_as_read": "отбележи всичко като прочетено",
-  "type": "Тип",
+  "type_test": "Тип",
   "unread": "Непрочетени",
   "replies": "Отговори",
   "mentions": "Споменавания",
@@ -628,7 +628,7 @@
   "show_hidden_posts": "Показване на скритите публикации",
   "post_hidden": "Публикацията е скрита",
   "hide_hidden_posts": "Скриване на скритите публикации",
-  "continue": "Продължаване",
+  "continue_test": "Продължаване",
   "go_back": "Назад",
   "show_upvotes": "Показване на положителните гласове",
   "show_upvote_percentage": "Показване на процент положителни гласове",
