--- a/translations/bn.json
+++ b/translations/bn.json
@@ -69,7 +69,7 @@
   "quote": "উক্তি",
   "spoiler": "সতর্কতা",
   "list": "তালিকা",
-  "mod": "ব্যবস্থাপক",
+  "mod_test": "ব্যবস্থাপক",
   "mods": "ব্যবস্থাপক",
   "settings": "পছন্দসমূহ",
   "admin_settings": "প্রশাসক পছন্দসমূহ",
@@ -222,7 +222,7 @@
   "to": "জন্য",
   "votes": "ভোট",
   "inbox": "চিঠিবাক্স",
-  "type": "ধরন",
+  "type_test": "ধরন",
   "unread": "অপঠিত",
   "replies": "উত্তরসমুহ",
   "api": "এপিআই",
@@ -329,7 +329,7 @@
   "show_upvote_percentage": "ঊর্ধ্বভোট দেখাও %",
   "fedilink": "ফেডিসংযোগ",
   "scaled": "উদীয়মান",
-  "continue": "এগিয়ে যাও",
+  "continue_test": "এগিয়ে যাও",
   "uploader": "আপলোডকারী",
   "uploads": "আপলোডসমূহ",
   "oauth_providers": "সরবরাহক"
