--- a/translations/ca.json
+++ b/translations/ca.json
@@ -85,7 +85,7 @@
   "unsticky": "no fijat",
   "link": "Enllaç",
   "archive_link": "enllaç de l’arxiu",
-  "mod": "moderador",
+  "mod_test": "moderador",
   "mods": "Moderadores",
   "moderates": "Modera",
   "settings": "Configuració",
@@ -150,7 +150,7 @@
   "inbox": "Bústia d’entrada",
   "inbox_for": "Bústia d’entrada per a <1>{{user}}</1>",
   "mark_all_as_read": "marca-ho tot com a llegit",
-  "type": "Tipus",
+  "type_test": "Tipus",
   "unread": "No llegit",
   "replies": "Respostes",
   "mentions": "Mencions",
@@ -701,7 +701,7 @@
   "banned_from_community_blurb": "<1>Bandeig:</1> no podeu publicar, comentar ni votar en aquesta comunitat. Tanmateix, encara podeu navegar.",
   "block_urls_placeholder": "Poseu aquí els vostres URL bloquejats, un per línia. Les cadenes d'expressió regular també funcionen, p.e. *.exemple.cat",
   "sending_back_message": "D'acord 👍. Us tornarem en {{seconds}}.",
-  "continue": "Continuar",
+  "continue_test": "Continuar",
   "go_back": "Tornar",
   "content_warning_setting_blurb": "Si configureu un avís de contingut es mostrarà un missatge amb l'avís que demana el consentiment per continuar.",
   "user_moderation_history": "Historial de moderació de {{user}}",
