--- a/translations/cs.json
+++ b/translations/cs.json
@@ -161,7 +161,7 @@
   "api": "API",
   "docs": "Dokumentace",
   "mark_all_as_read": "označit vše za přečtené",
-  "type": "Typ",
+  "type_test": "Typ",
   "unread": "Nepřečtené",
   "mentions": "Zmínky",
   "message_sent": "Zpráva odeslána",
@@ -261,7 +261,7 @@
   "moderates": "Moderuje",
   "appoint_as_mod": "Jmenovat moderátorem",
   "modlog": "Moderátorský záznam",
-  "mod": "moderátor",
+  "mod_test": "moderátor",
   "appoint_as_admin": "Jmenovat administrátorem",
   "stickied": "připnuto",
   "deleted": "smazáno tvůrcem",
