--- a/translations/cy.json
+++ b/translations/cy.json
@@ -91,7 +91,7 @@
     "day": "diwrnod",
     "week": "wythnos",
     "month": "mis",
-    "type": "Math",
+    "type_test": "Math",
     "error_page_title": "Gwall!",
     "number_of_communities_0": "{{formattedCount}} Cymunedau",
     "number_of_communities_1": "{{formattedCount}} Cymuned",
@@ -189,7 +189,7 @@
     "quote": "dyfyniad",
     "spoiler": "sboiler",
     "list": "rhestr",
-    "mod": "cymedrolwr",
+    "mod_test": "cymedrolwr",
     "mods": "cymedrolwyr",
     "distinguish": "siarad fel cymedrolwr",
     "undistinguish": "siarad fel defnyddiwr",
