--- a/translations/da.json
+++ b/translations/da.json
@@ -119,7 +119,7 @@
   "spoiler": "indholdsadvarsel",
   "list": "liste",
   "mods": "moderatorer",
-  "mod": "moderator",
+  "mod_test": "moderator",
   "moderates": "Modererer",
   "settings": "Indstillinger",
   "admin_settings": "Administratorindstillinger",
@@ -185,7 +185,7 @@
   "inbox": "Indbakke",
   "inbox_for": "Indbakke for <1>{{user}}</1>",
   "mark_all_as_read": "marker alt som læst",
-  "type": "Type",
+  "type_test": "type_test",
   "unread": "Ulæste",
   "replies": "Svar",
   "mentions": "Nævnte dig",
@@ -631,7 +631,7 @@
   "hide_hidden_posts": "Vis ikke skjulte indlæg",
   "content_warning": "Indholdsadvarsel",
   "sending_back_message": "Okay 👍. Sender dig tilbage om {{seconds}}.",
-  "continue": "Fortsæt",
+  "continue_test": "Fortsæt",
   "go_back": "Gå tilbage",
   "content_warning_setting_blurb": "En indholdsadvarsel vil spørge om samtykke med den angivne advarsel før indholdet bliver vist.",
   "show_upvotes": "Vis opstemmer",
