--- a/translations/de.json
+++ b/translations/de.json
@@ -53,7 +53,7 @@
   "unsticky": "nicht angepinnt",
   "link": "Link",
   "archive_link": "Archiv-Link",
-  "mod": "Moderator",
+  "mod_test": "Moderator",
   "mods": "Moderatoren",
   "moderates": "Moderiert",
   "settings": "Einstellungen",
@@ -114,7 +114,7 @@
   "inbox": "Posteingang",
   "inbox_for": "Posteingang für <1>{{user}}</1>",
   "mark_all_as_read": "Alle als gelesen markieren",
-  "type": "Typ",
+  "type_test": "Typ",
   "unread": "Ungelesen",
   "replies": "Antworten",
   "mentions": "Erwähnung",
@@ -585,7 +585,7 @@
   "undeleted_comment": "Wiederhergestellter Beitrag",
   "unban_with_name": "{{user}} entbannen",
   "days_until_expiration": "Tage bis zum Ablauf",
-  "continue": "Fortfahren",
+  "continue_test": "Fortfahren",
   "go_back": "Zurück",
   "deleted_post": "Gelöschter Beitrag",
   "ban_with_name": "{{user}} bannen",
