--- a/translations/el.json
+++ b/translations/el.json
@@ -83,7 +83,7 @@
   "unsticky": "ξεκαρφίτσωμα",
   "link": "Σύνδεσμος",
   "archive_link": "αρχειοθετημένος σύνδεσμος",
-  "mod": "συντονιστής",
+  "mod_test": "συντονιστής",
   "mods": "συντονιστές",
   "moderates": "Συντονίζει",
   "settings": "Ρυθμίσεις",
@@ -142,7 +142,7 @@
   "subscribe": "Εγγραφή",
   "inbox_for": "Εισερχόμενα για <1>{{user}}</1>",
   "mark_all_as_read": "επισήμανση όλων ως αναγνωσμένα",
-  "type": "Είδος",
+  "type_test": "Είδος",
   "unread": "Αδιάβαστα",
   "url": "URL",
   "subscribed": "Συνδρομές",
@@ -626,7 +626,7 @@
   "block_urls_placeholder": "Εισάγετε τα URL για μπλοκάρισμα εδώ, ένα URL ανά γραμμή. Λειτουργούν επίσης και οι συμβολοσειρές Regex, π.χ. *.example.com",
   "content_warning": "Προειδοποίηση Περιεχομένου",
   "sending_back_message": "Εντάξει 👍. Αποστολή σε {{seconds}}.",
-  "continue": "Συνέχεια",
+  "continue_test": "Συνέχεια",
   "show_upvotes": "Προβολή θετικών ψήφων",
   "show_downvotes": "Προβολή αρνητικών ψήφων",
   "show_upvote_percentage": "Προβολή % θετικής ψήφου",
