--- a/translations/en.json
+++ b/translations/en.json
@@ -184,7 +184,7 @@
   "list": "List",
   "card": "Card",
   "small_card": "Small card",
-  "mod": "mod",
+  "mod_test": "mod",
   "mods": "Mods",
   "all_mods": "All mods",
   "distinguish": "Speak as moderator",
@@ -407,7 +407,7 @@
   "inbox": "Inbox",
   "inbox_for": "Inbox for <1>{{user}}</1>",
   "mark_all_as_read": "mark all as read",
-  "type": "Type",
+  "type_test": "type_test",
   "read": "Read",
   "unread": "Unread",
   "show_unread_only": "Show unread only",
@@ -851,7 +851,7 @@
   "block_urls_placeholder": "Put your blocked URLs here, one URL per line. Regex strings work also, IE *.example.com",
   "content_warning": "Content Warning",
   "sending_back_message": "Alright 👍. Sending you back in {{seconds}}.",
-  "continue": "Continue",
+  "continue_test": "Continue",
   "go_back": "Go Back",
   "content_warning_setting_blurb": "Setting a content warning will display a prompt with the content warning asking the user for their consent to continue.",
   "user_moderation_history": "{{user}} Moderation History",
