--- a/translations/eo.json
+++ b/translations/eo.json
@@ -44,7 +44,7 @@
   "unlock": "Malŝlosi",
   "lock": "Ŝlosi",
   "link": "ligilo",
-  "mod": "kontrolanto",
+  "mod_test": "kontrolanto",
   "mods": "kontrolantoj",
   "moderates": "Kontrolas",
   "settings": "Agordoj",
@@ -100,7 +100,7 @@
   "inbox": "Ricevujo",
   "inbox_for": "Ricevujo de <1>{{user}}</1>",
   "mark_all_as_read": "marki ĉiujn kiel legitajn",
-  "type": "Tipo",
+  "type_test": "Tipo",
   "unread": "Nelegitaj",
   "reply_sent": "Respondo sendiĝis",
   "search": "Serĉi",
@@ -621,7 +621,7 @@
   "leave_admin_team_confirmation": "Ĉu vi certe volas eliri el la administrada teamo?",
   "content_warning": "Enhava averto",
   "sending_back_message": "Bone 👍. Sendante vi reen en {{seconds}}.",
-  "continue": "Daŭrigi",
+  "continue_test": "Daŭrigi",
   "go_back": "Iri reen",
   "show_upvotes": "Montri por-voĉdonojn",
   "show_downvotes": "Montri kontraŭ-voĉdonojn",
