--- a/translations/es.json
+++ b/translations/es.json
@@ -65,7 +65,7 @@
   "unsticky": "no fijado",
   "link": "enlace",
   "archive_link": "enlace de archivo",
-  "mod": "moderador",
+  "mod_test": "moderador",
   "mods": "moderadores",
   "moderates": "Moderados",
   "settings": "Configuración",
@@ -129,7 +129,7 @@
   "inbox": "Buzón de entrada",
   "inbox_for": "Buzón de entrada para <1>{{user}}</1>",
   "mark_all_as_read": "marcar todo como leído",
-  "type": "Tipo",
+  "type_test": "Tipo",
   "unread": "No leído",
   "replies": "Respuestas",
   "mentions": "Menciones",
@@ -637,7 +637,7 @@
   "block_urls": "Bloquear URLs",
   "block_urls_placeholder": "Pon aquí tus URLs bloqueadas, una URL por línea. También funcionan expresiones regulares, por ejemplo, *.example.com",
   "hide_hidden_posts": "Esconder publicaciones ocultas",
-  "continue": "Continuar",
+  "continue_test": "Continuar",
   "go_back": "Volver",
   "content_warning": "Advertencia de contenido",
   "uploader": "Subió contenido",
