--- a/translations/et.json
+++ b/translations/et.json
@@ -240,7 +240,7 @@
   "formatting_help": "vormistusabi",
   "sorting_help": "sorteerimisabi",
   "view_source": "vaata lähtekoodi",
-  "mod": "moderaator",
+  "mod_test": "moderaator",
   "mods": "moderaatorid",
   "distinguish": "räägi kui moderaator",
   "undistinguish": "räägi kui kasutaja",
@@ -315,7 +315,7 @@
   "inbox": "Postkast",
   "inbox_for": "<1>{{user}}</1> postkast",
   "mark_all_as_read": "märgi kõik loetuks",
-  "type": "Tüüp",
+  "type_test": "Tüüp",
   "unread": "Lugemata",
   "replies": "Vastused",
   "mentions": "Mainimised",
