--- a/translations/eu.json
+++ b/translations/eu.json
@@ -90,7 +90,7 @@
   "sticky": "finkatuta",
   "unsticky": "finkatu gabe",
   "archive_link": "artxiboko esteka",
-  "mod": "moderatzailea",
+  "mod_test": "moderatzailea",
   "mods": "moderatzaileak",
   "moderates": "Moderatuak",
   "settings": "Ezarpenak",
@@ -152,7 +152,7 @@
   "inbox": "Sarrera-erretilua",
   "inbox_for": "<1>{{user}}</1>(r)en sarrera-erretilua",
   "mark_all_as_read": "markatu guztiak irakurrita gisa",
-  "type": "Mota",
+  "type_test": "Mota",
   "number_of_communities": "Komunitate {{formattedCount}}",
   "number_of_communities_plural": "{{formattedCount}} komunitate",
   "mentions": "Aipamenak",
