--- a/translations/fa.json
+++ b/translations/fa.json
@@ -76,7 +76,7 @@
     "all": "همه",
     "top": "بالاترین",
     "mark_all_as_read": "علامت زدن همه به عنوان خوانده شده",
-    "type": "نوع",
+    "type_test": "نوع",
     "unread": "خوانده‌نشده",
     "replies": "پاسخ‌ها",
     "mentions": "اشاره‌ها",
@@ -176,7 +176,7 @@
     "banned": "ممنوع شده",
     "description": "توضیحات",
     "subscript": "زیرنویس",
-    "mod": "ناظم",
+    "mod_test": "ناظم",
     "mods": "ناظم‌ها",
     "modlog": "گزارش ناظم",
     "old": "قدیمی",
