--- a/translations/fi.json
+++ b/translations/fi.json
@@ -66,7 +66,7 @@
   "unsticky": "poista kiinnitys",
   "link": "linkitä",
   "archive_link": "arkistoi linkki",
-  "mod": "valvoja",
+  "mod_test": "valvoja",
   "mods": "valvojat",
   "moderates": "Valvoo",
   "settings": "Asetukset",
@@ -128,7 +128,7 @@
   "inbox": "Postilaatikko",
   "inbox_for": "Käyttäjän <1>{{user}}</1> postilaatikko",
   "mark_all_as_read": "merkitse kaikki luetuiksi",
-  "type": "Tyyppi",
+  "type_test": "Tyyppi",
   "unread": "Lukematon",
   "replies": "Vastaukset",
   "mentions": "Maininnat",
@@ -668,7 +668,7 @@
   "community_visibility": "Näkyvyys",
   "content_warning": "Sisältövaroitus",
   "sending_back_message": "Selvä 👍. Lähetetään sinut takaisin {{seconds}} sekunnissa.",
-  "continue": "Jatka",
+  "continue_test": "Jatka",
   "go_back": "Mene takaisin",
   "remote_follow_local_instance": "Paikallista instanssia ei voida noutaa muualta seuraamista varten",
   "content_warning_setting_blurb": "Sisältövaroituksen asettaminen näyttää dialogin sisältövaroituksella, jossa kysytään käyttäjän hyväksyntää jatkamista varten.",
