--- a/translations/fr.json
+++ b/translations/fr.json
@@ -61,7 +61,7 @@
   "unsticky": "désépingler",
   "link": "lien",
   "archive_link": "archiver le lien",
-  "mod": "modérateur",
+  "mod_test": "modérateur",
   "mods": "modérateurs",
   "moderates": "Modérer",
   "settings": "Paramètres",
@@ -124,7 +124,7 @@
   "inbox": "Boîte de réception",
   "inbox_for": "Boîte de réception de <1>{{user}}</1>",
   "mark_all_as_read": "Tout marquer comme lu",
-  "type": "Type",
+  "type_test": "type_test",
   "unread": "Non-lu",
   "replies": "Réponses",
   "mentions": "Mentions",
@@ -620,7 +620,7 @@
   "go_back": "Revenir en arrière",
   "content_warning": "Avertissement de contenu",
   "sending_back_message": "Compris 👍. Nous vous renvoyons dans {{seconds}}.",
-  "continue": "Continuer",
+  "continue_test": "Continuer",
   "content_warning_setting_blurb": "Configurer un avertissement de contenu affichera un avertissement de contenu demandant le consentement de l'utilisateur avant de continuer.",
   "show_upvotes": "Afficher les votes pour",
   "show_downvotes": "Afficher les votes contre",
