--- a/translations/ga.json
+++ b/translations/ga.json
@@ -53,7 +53,7 @@
     "inbox": "Bosca Isteach",
     "inbox_for": "Bosca Isteach do <1>{{user}}</1>",
     "mark_all_as_read": "marcáil gach rud mar atá léite",
-    "type": "Cineál",
+    "type_test": "Cineál",
     "unread": "Gan léamh",
     "replies": "Freagraí",
     "mentions": "Luann",
@@ -155,7 +155,7 @@
     "unsticky": "cealaigh bioráin",
     "link": "nasc",
     "archive_link": "nasc cartlainne",
-    "mod": "modhnóir",
+    "mod_test": "modhnóir",
     "mods": "modhnóirí",
     "moderates": "Modhnóireacht",
     "settings": "Socruithe",
