--- a/translations/gl.json
+++ b/translations/gl.json
@@ -83,7 +83,7 @@
   "quote": "cita",
   "spoiler": "espoiler",
   "list": "listaxe",
-  "mod": "mod",
+  "mod_test": "mod",
   "mods": "mods",
   "moderates": "Modera",
   "admin_settings": "Axustes de Admin",
@@ -200,7 +200,7 @@
   "inbox": "Mensaxes",
   "inbox_for": "Mensaxes de 1>{{user}}</1>",
   "mark_all_as_read": "marcar todo como lido",
-  "type": "Tipo",
+  "type_test": "Tipo",
   "unread": "Non lido",
   "reply_sent": "Resposta enviada",
   "message_sent": "Mensaxe enviada",
@@ -624,7 +624,7 @@
   "uploader": "Cargador",
   "content_warning": "Aviso sobre o Contido",
   "sending_back_message": "Vale 👍. Enviámoste de volta en {{seconds}}.",
-  "continue": "Continuar",
+  "continue_test": "Continuar",
   "go_back": "Volver",
   "show_upvotes": "Mostrar votos positivos",
   "show_downvotes": "Mostrar votos negativos",
