--- a/translations/he.json
+++ b/translations/he.json
@@ -115,7 +115,7 @@
   "spoiler": "ספוילר",
   "list": "רשימה",
   "superscript": "טקסט עליון",
-  "mod": "מנהל",
+  "mod_test": "מנהל",
   "mods": "מנהלים",
   "distinguish": "דבר כמנהל",
   "undistinguish": "דבר כמשתמש",
@@ -250,7 +250,7 @@
   "description": "תיאור",
   "sort_type": "סוג מיון",
   "replies": "תגובות",
-  "type": "סוג",
+  "type_test": "סוג",
   "unread": "לא נקרא",
   "mentions": "איזכורים",
   "community_locked_message": "<1>הקהילה נעולה:</1> רק מנהלים יכולים ליצור פוסטים. אתה עדיין יכול להגיב על פוסטים.",
