--- a/translations/hi.json
+++ b/translations/hi.json
@@ -59,7 +59,7 @@
   "removed": "हटाए गए",
   "locked": "बंद",
   "reason": "कारण",
-  "mod": "मध्यस्थ",
+  "mod_test": "मध्यस्थ",
   "admin_settings": "प्रशासक समायोजन (सेटिंग्स)",
   "remove_as_mod": "मध्यथ के स्थान से हटाएँ",
   "admins": "प्रशासकों",
