--- a/translations/hu.json
+++ b/translations/hu.json
@@ -72,7 +72,7 @@
   "sticky": "rögzítés",
   "unsticky": "rögzítés feloldása",
   "link": "hivatkozás",
-  "mod": "moderátor",
+  "mod_test": "moderátor",
   "mods": "moderátorok",
   "moderates": "Moderáltak",
   "settings": "Beállítások",
@@ -149,7 +149,7 @@
   "docs": "Dokumentációk",
   "inbox": "Bejövő",
   "mark_all_as_read": "összes megjelölése olvasottként",
-  "type": "Típus",
+  "type_test": "Típus",
   "unread": "Olvasatlan",
   "replies": "Válaszok",
   "mentions": "Említések",
@@ -678,7 +678,7 @@
   "banned_from_community_blurb": "<1>Kitiltva:</1> Nem tehet bejegyzést, hozzászólást, szavazhat a közösségben. Ettől függetlenül böngészhet a tartalmak között.",
   "private_message_form_user_matrix_blurb": "Ennek a felhasználónak már van egy matrix fiókja amin elérhető: <1>{{matrix_id}}</1>.",
   "block_urls_placeholder": "Illessze be a blokkolni kívánt hivatkozásokat, soronként egyet. A Regex sorok a következőképp működnek: *.pelda.com",
-  "continue": "Folytatás",
+  "continue_test": "Folytatás",
   "go_back": "Visszalépés",
   "content_warning": "Felnőtt tartalom figyelmeztetés",
   "sending_back_message": "Rendben 👍. Visszatérés {{seconds}} mp múlva.",
