--- a/translations/id.json
+++ b/translations/id.json
@@ -55,7 +55,7 @@
   "upload_icon": "Unggah Ikon",
   "lock": "Kunci",
   "bold": "tebal",
-  "mod": "moderator",
+  "mod_test": "moderator",
   "mods": "para moderator",
   "settings": "Pengaturan",
   "view_source": "lihat sumber",
@@ -151,7 +151,7 @@
   "docs": "Dokumentasi",
   "inbox": "Kotak Masuk",
   "inbox_for": "Kotak Masuk untuk <1>{{user}}</1>",
-  "type": "Tipe",
+  "type_test": "Tipe",
   "unread": "Belum dibaca",
   "replies": "Balasan",
   "mentions": "Menyebut",
@@ -500,7 +500,7 @@
   "controversial": "Kontrovesial",
   "public_blurb": "Komunitas ini bisa difederasikan ke peladen lain dan bisa dipos/dikomentari oleh pengguna di peladen tersebut.",
   "sending_back_message": "Oke 👍. Mengirimkan kamu kembali dalam {{seconds}}.",
-  "continue": "Lanjut",
+  "continue_test": "Lanjut",
   "go_back": "Kembali",
   "content_warning_setting_blurb": "Mengatur peringatan konten akan menampilkan peringatan yang menanyakan pengguna tentang persetujuan mereka untuk melanjutkan.",
   "language_not_allowed": "Bahasa tidak diperbolehkan",
