--- a/translations/it.json
+++ b/translations/it.json
@@ -52,7 +52,7 @@
   "sticky": "evidenzia",
   "unsticky": "rimuovi evidenza",
   "link": "collegamento",
-  "mod": "moderatore",
+  "mod_test": "moderatore",
   "mods": "moderatori",
   "moderates": "Moderatore di",
   "settings": "Impostazioni",
@@ -112,7 +112,7 @@
   "inbox": "Posta in arrivo",
   "inbox_for": "Posta di <1>{{user}}</1>",
   "mark_all_as_read": "segna tutti come letti",
-  "type": "Tipo",
+  "type_test": "Tipo",
   "unread": "Non letti",
   "replies": "Risposte",
   "mentions": "Menzioni",
