--- a/translations/ja.json
+++ b/translations/ja.json
@@ -57,7 +57,7 @@
   "unsticky": "固定解除",
   "link": "リンク",
   "archive_link": "リンクをアーカイブ",
-  "mod": "モデレーター",
+  "mod_test": "モデレーター",
   "mods": "モデレーター",
   "moderates": "モデレーター",
   "settings": "設定",
@@ -116,7 +116,7 @@
   "inbox": "受信箱",
   "inbox_for": "<1>{{user}}</1> の受信箱",
   "mark_all_as_read": "全てを既読にする",
-  "type": "検索対象",
+  "type_test": "検索対象",
   "unread": "未読",
   "replies": "返信",
   "mentions": "言及",
@@ -637,7 +637,7 @@
   "block_urls": "URLをブロックする",
   "block_urls_placeholder": "ここにブロックするURLを入力してください。1行に1つのURLを記入します。正規表現も使用できます。例えば、*.example.com",
   "sending_back_message": "わかりました 👍。{{seconds}} 秒後に戻します。",
-  "continue": "次へ",
+  "continue_test": "次へ",
   "go_back": "戻る",
   "leave_admin_team_confirmation": "本当に管理者チームを離れたいですか？",
   "leaving_admin_team": "管理者チームを離れる",
