--- a/translations/ka.json
+++ b/translations/ka.json
@@ -42,7 +42,7 @@
   "sticky": "დამაგრებული",
   "link": "ბმული",
   "archive_link": "ბმულის არქივება",
-  "mod": "მოდერატორი",
+  "mod_test": "მოდერატორი",
   "mods": "მოდერატორები",
   "moderates": "მოდერირება",
   "settings": "პარამეტრები",
@@ -101,7 +101,7 @@
   "inbox": "შემოსული",
   "inbox_for": "<1>{{user}}</1>-ს შემოსული",
   "mark_all_as_read": "ყველა წაკითხულად მონიშვნა",
-  "type": "ტიპი",
+  "type_test": "ტიპი",
   "unread": "წაუკითხავი",
   "mentions": "შეხსენებები",
   "reply_sent": "პასუხი გაგზავნილია",
