--- a/translations/ko.json
+++ b/translations/ko.json
@@ -89,7 +89,7 @@
   "appoint_as_admin": "관리자로 임명",
   "removed": "중재자가 삭제함",
   "locked": "잠김",
-  "mod": "중재자",
+  "mod_test": "중재자",
   "mods": "중재자",
   "remove_as_mod": "중재자에서 제거됨",
   "show_context": "바로가기",
@@ -139,7 +139,7 @@
   "api": "API",
   "inbox": "받은 편지함",
   "mark_all_as_read": "모두 읽은 상태로 표시",
-  "type": "유형",
+  "type_test": "유형",
   "unread": "읽지 않음",
   "docs": "문서",
   "new": "새로운",
