--- a/translations/lt.json
+++ b/translations/lt.json
@@ -61,7 +61,7 @@
     "quote": "citata",
     "spoiler": "atskleidžiamas turinys",
     "list": "sąrašas",
-    "mod": "moderatorius",
+    "mod_test": "moderatorius",
     "moderates": "Moderavimas",
     "settings": "Nustatymai",
     "admin_settings": "Administratoriaus nustatymai",
@@ -145,7 +145,7 @@
     "inbox": "Gautieji",
     "inbox_for": "Gautieji vartotojui <1>{{user}}</1>",
     "mark_all_as_read": "pažymėti viską kaip skaitytą",
-    "type": "Rūšis",
+    "type_test": "Rūšis",
     "unread": "Neskaityti",
     "search": "Paieška",
     "overview": "Apžvalga",
