--- a/translations/mk.json
+++ b/translations/mk.json
@@ -137,7 +137,7 @@
   "list": "Листа",
   "card": "Картичка",
   "small_card": "Мала картичка",
-  "mod": "мод",
+  "mod_test": "мод",
   "mods": "модови",
   "distinguish": "Говори како модератор",
   "undistinguish": "Говори како корисник",
@@ -333,7 +333,7 @@
   "inbox": "Сандче",
   "inbox_for": "Сандче за <1>{{user}}</1>",
   "mark_all_as_read": "означи ги сите како прочитани",
-  "type": "Тип",
+  "type_test": "Тип",
   "read": "Прочитано",
   "unread": "Непрочитано",
   "replies": "Одговори",
@@ -768,7 +768,7 @@
   "block_urls_placeholder": "Внесете ги вашите блокирани URL-адреси тука, една URL-адреса по линија. Regex стрингови исто така функционираат, на пр. *.example.com",
   "content_warning": "Предупредување за содржина",
   "sending_back_message": "Во ред 👍. Ве враќам за {{seconds}}.",
-  "continue": "Продолжи",
+  "continue_test": "Продолжи",
   "go_back": "Назад",
   "content_warning_setting_blurb": "Поставувањето на предупредување за содржина ќе прикаже промпт со предупредувањето за содржина барајќи согласност од корисникот за да продолжи.",
   "user_moderation_history": "{{user}} Историја на модерација",
