--- a/translations/ml.json
+++ b/translations/ml.json
@@ -63,7 +63,7 @@
     "local": "പ്രാദേശികം",
     "top": "മികച്ചത്",
     "api": "എപിഐ",
-    "type": "തരം",
+    "type_test": "തരം",
     "mentions": "സൂചനകൾ",
     "reply_sent": "മറുപടി അയച്ചൂ",
     "search": "തിരയുക",
@@ -112,7 +112,7 @@
     "icon": "ചിഹ്നം",
     "bot_account": "റോബോട്ട് അക്കൗണ്ട്",
     "show_read_posts": "വായിച്ച പോസ്റ്റുകൾ കാണിക്കുക",
-    "mod": "മോഡ്",
+    "mod_test": "മോഡ്",
     "admin_settings": "അഡ്മിൻ ക്രമീകരണങ്ങൾ",
     "reason": "കാരണം",
     "mark_as_read": "വായിച്ചതായി അടയാളപ്പെടുത്തുക",
