--- a/translations/nb_NO.json
+++ b/translations/nb_NO.json
@@ -136,7 +136,7 @@
     "quote": "Sitat",
     "spoiler": "Røpealarm",
     "list": "Liste",
-    "mod": "Mod",
+    "mod_test": "Mod",
     "mods": "Mod-er",
     "undistinguish": "Skriv som bruker",
     "moderates": "Modererer",
@@ -273,7 +273,7 @@
     "inbox": "Innboks",
     "inbox_for": "Innboks for <1>{{user}}</1>",
     "mark_all_as_read": "merk alle som lest",
-    "type": "Type",
+    "type_test": "type_test",
     "unread": "Ulest",
     "replies": "Svar",
     "reply_sent": "Svar sendt",
