--- a/translations/nl.json
+++ b/translations/nl.json
@@ -59,7 +59,7 @@
   "unlock": "Ontgrendelen",
   "lock": "Vergrendelen",
   "link": "koppelen",
-  "mod": "mod",
+  "mod_test": "mod",
   "mods": "mods",
   "moderates": "Modereert",
   "settings": "Instellingen",
@@ -115,7 +115,7 @@
   "inbox": "Postvak in",
   "inbox_for": "Postvak in voor <1>{{user}}</1>",
   "mark_all_as_read": "Alles als gelezen markeren",
-  "type": "Type",
+  "type_test": "type_test",
   "unread": "Ongelezen",
   "reply_sent": "Reactie verzonden",
   "search": "Zoeken",
@@ -623,7 +623,7 @@
   "uploader": "Uploader",
   "uploads": "Uploads",
   "post_unhidden": "Bericht hersteld",
-  "continue": "Doorgaan",
+  "continue_test": "Doorgaan",
   "custom_thumbnail_url": "Miniatuur-URL",
   "post_hidden": "Bericht verborgen",
   "hide_post": "Bericht verbergen",
