--- a/translations/nn.json
+++ b/translations/nn.json
@@ -71,7 +71,7 @@
   "subscribe": "Abonner",
   "subscribed": "Abonnement",
   "mark_all_as_read": "merk alle som lesne",
-  "type": "Type",
+  "type_test": "type_test",
   "unread": "Ulesne",
   "replies": "Svar",
   "message_sent": "Melding send",
@@ -350,7 +350,7 @@
   "unread_registration_applications_plural": "{{formattedCount}} ulesne søknadar",
   "spoiler": "Røpealarm",
   "list": "Liste",
-  "mod": "Mod",
+  "mod_test": "Mod",
   "mods": "Mod-ar",
   "distinguish": "Skriv som moderator",
   "undistinguish": "Skriv som brukar",
@@ -625,7 +625,7 @@
   "delete_account_content": "Slett alle innlegg, kommentarar og opplasta bilete",
   "content_warning": "Innhaldsåtvaring",
   "sending_back_message": "Greitt 👍! Sender deg tilbake om {{seconds}}.",
-  "continue": "Hald fram",
+  "continue_test": "Hald fram",
   "go_back": "Gå tilbake",
   "content_warning_setting_blurb": "Når du definerer ei innhalds­åtvaring, vert lesarane bedt om samtykke for å halda fram med å visa innhaldet.",
   "custom_thumbnail_url": "Adresse til miniatyrbilete",
