--- a/translations/oc.json
+++ b/translations/oc.json
@@ -79,7 +79,7 @@
   "invalid_username": "Nom d'utilizaire invalid.",
   "icon": "Icòna",
   "sort_type": "Triar per tipe",
-  "type": "Tipe",
+  "type_test": "Tipe",
   "unread": "Pas legit",
   "link": "ligam",
   "admin_settings": "Paramètres d’administracion",
@@ -157,7 +157,7 @@
   "subscribed": "Seguidors",
   "active": "Actiu",
   "sticky": "penjar",
-  "mod": "moderator",
+  "mod_test": "moderator",
   "mods": "moderators",
   "show_read_posts": "Mostrar las publicacions legidas",
   "formatting_help": "ajuda al formatatge",
