--- a/translations/pl.json
+++ b/translations/pl.json
@@ -80,7 +80,7 @@
   "unsticky": "odklej",
   "link": "link",
   "archive_link": "link archiwalny",
-  "mod": "moderator",
+  "mod_test": "moderator",
   "mods": "moderacja",
   "moderates": "Moderuje",
   "settings": "Ustawienia",
@@ -146,7 +146,7 @@
   "inbox": "Skrzynka odbiorcza",
   "inbox_for": "Skrzynka odbiorcza <1>{{user}}</1>",
   "mark_all_as_read": "zaznacz wszystko jako przeczytane",
-  "type": "Rodzaj",
+  "type_test": "Rodzaj",
   "unread": "Nieprzeczytane",
   "replies": "Odpowiedzi",
   "mentions": "Wzmianki",
@@ -652,7 +652,7 @@
   "upvote_percentage": "{{formattedCount}}% głosów w górę",
   "content_warning": "Ostrzeżenie o treści",
   "sending_back_message": "W porządku 👍. Odsyłamy cię za {{seconds}}.",
-  "continue": "Przejdź dalej",
+  "continue_test": "Przejdź dalej",
   "go_back": "Wróć",
   "content_warning_setting_blurb": "Ustawienie ostrzeżenia o treści wyświetli komunikat pytający o wyrażenie zgody przed przejściem dalej.",
   "block_urls": "Zablokuj adresy URL",
