--- a/translations/pt.json
+++ b/translations/pt.json
@@ -74,7 +74,7 @@
   "quote": "citação",
   "spoiler": "escondido",
   "list": "lista",
-  "mod": "moderador",
+  "mod_test": "moderador",
   "mods": "moderadores",
   "moderates": "Modera",
   "settings": "Definições",
@@ -175,7 +175,7 @@
   "message_sent": "Mensagem enviada",
   "search": "Pesquisar",
   "overview": "Visão geral",
-  "type": "Tipo",
+  "type_test": "Tipo",
   "view": "Ver",
   "logout": "Sair",
   "login_sign_up": "Entrar / Registar",
@@ -584,7 +584,7 @@
   "purging": "A purgar",
   "content_warning": "Avisos de conteúdo",
   "sending_back_message": "Pronto 👍. A enviar-te de vota em {{seconds}}.",
-  "continue": "Continuar",
+  "continue_test": "Continuar",
   "go_back": "Voltar",
   "show_upvotes": "Mostrar votos positivos",
   "show_downvotes": "Mostrar votos negativos",
