--- a/translations/pt_BR.json
+++ b/translations/pt_BR.json
@@ -61,7 +61,7 @@
   "unsticky": "desafixar",
   "link": "link",
   "archive_link": "arquivar link",
-  "mod": "mod",
+  "mod_test": "mod",
   "mods": "mods",
   "moderates": "Modera",
   "settings": "Configurações",
@@ -124,7 +124,7 @@
   "inbox": "Caixa de entrada",
   "inbox_for": "Caixa de entrada de <1>{{user}}</1>",
   "mark_all_as_read": "marcar tudo como lido",
-  "type": "Tipo",
+  "type_test": "Tipo",
   "unread": "Não lido",
   "replies": "Respostas",
   "mentions": "Menções",
