--- a/translations/ro.json
+++ b/translations/ro.json
@@ -107,7 +107,7 @@
   "quote": "citat",
   "spoiler": "spoiler",
   "list": "listă",
-  "mod": "moderator",
+  "mod_test": "moderator",
   "mods": "moderatori",
   "distinguish": "vorbește ca un moderator",
   "undistinguish": "vorbește ca un utilizator",
@@ -159,7 +159,7 @@
   "number_of_months_0": "{{formattedCount}} lună",
   "number_of_months_1": "{{formattedCount}} luni",
   "number_of_months_2": "{{formattedCount}} luni",
-  "type": "Tip",
+  "type_test": "Tip",
   "unread": "Necitit",
   "mark_all_as_read": "marcheaza tot ca citit",
   "logout": "Delogare",
