--- a/translations/ru.json
+++ b/translations/ru.json
@@ -44,7 +44,7 @@
   "unlock": "Разблокировать",
   "lock": "Блокировать",
   "link": "ссылка",
-  "mod": "модератор",
+  "mod_test": "модератор",
   "mods": "модераторы",
   "moderates": "Модерирует",
   "settings": "Настройки",
@@ -102,7 +102,7 @@
   "inbox": "Входящие",
   "inbox_for": "Входящие для <1>{{user}}</1>",
   "mark_all_as_read": "пометить все как прочитанные",
-  "type": "Тип",
+  "type_test": "Тип",
   "unread": "Непрочитанное",
   "reply_sent": "Ответ отправлен",
   "search": "Поиск",
