--- a/translations/sk.json
+++ b/translations/sk.json
@@ -390,7 +390,7 @@
   "number_of_months_0": "{{formattedCount}} mesiac",
   "number_of_months_1": "{{formattedCount}} mesiace",
   "number_of_months_2": "{{formattedCount}} mesiacov",
-  "type": "Typ",
+  "type_test": "Typ",
   "unread": "Neprečítané",
   "replies": "Odpovede",
   "mentions": "Zmienky",
@@ -453,7 +453,7 @@
   "only_admins_can_create_communities": "Iba administrátori smú vytvárať komunity",
   "only_mods_can_post_in_community": "Iba moderátori môžu prispievať do tejto komunity",
   "remove": "odstrániť",
-  "mod": "moderátor",
+  "mod_test": "moderátor",
   "mods": "moderátori",
   "distinguish": "hovoriť ako moderátor",
   "undistinguish": "hovoriť ako používateľ",
