--- a/translations/sl.json
+++ b/translations/sl.json
@@ -137,7 +137,7 @@
   "list": "Seznam",
   "card": "Kartica",
   "small_card": "Majhna kartica",
-  "mod": "moderator",
+  "mod_test": "moderator",
   "mods": "moderatorji",
   "distinguish": "Govori kot moderator",
   "undistinguish": "Govori kot uporabnik",
@@ -333,7 +333,7 @@
   "inbox": "Prejeto",
   "inbox_for": "Prejeto za <1>{{user}}</1>",
   "mark_all_as_read": "označi vse kot prebrano",
-  "type": "Vrsta",
+  "type_test": "Vrsta",
   "read": "Prebrano",
   "unread": "Neprebrano",
   "replies": "Odgovori",
@@ -768,7 +768,7 @@
   "block_urls_placeholder": "Tukaj vnesite blokirane URL-je, en URL na vrstico. Delujejo tudi Regex nizi, npr. *.example.com",
   "content_warning": "Opozorilo o vsebini",
   "sending_back_message": "Prav 👍. Pošiljam vas nazaj v {{seconds}}.",
-  "continue": "Nadaljuj",
+  "continue_test": "Nadaljuj",
   "go_back": "Pojdi nazaj",
   "content_warning_setting_blurb": "Nastavitev opozorila o vsebini bo prikazala poziv z opozorilom o vsebini, ki bo uporabnika prosil za soglasje za nadaljevanje.",
   "user_moderation_history": "Zgodovina moderiranja uporabnika {{user}}",
