--- a/translations/sq.json
+++ b/translations/sq.json
@@ -137,7 +137,7 @@
   "list": "Listë",
   "card": "Kartë",
   "small_card": "Kartë e vogël",
-  "mod": "mod",
+  "mod_test": "mod",
   "mods": "moderatët",
   "distinguish": "Foli si moderator",
   "undistinguish": "Foli si përdorues",
@@ -333,7 +333,7 @@
   "inbox": "Kuti postare",
   "inbox_for": "Kuti postare për <1>{{user}}</1>",
   "mark_all_as_read": "shëno të gjitha si të lexuara",
-  "type": "Lloji",
+  "type_test": "Lloji",
   "read": "Lexuar",
   "unread": "Palexuar",
   "replies": "Përgjigjet",
@@ -768,7 +768,7 @@
   "block_urls_placeholder": "Vendosni URL-të tuaja të bllokuara këtu, një URL për rresht. Funksionojnë edhe vargjet Regex, p.sh. *.example.com",
   "content_warning": "Paralajmërim për Përmbajtjen",
   "sending_back_message": "Në rregull 👍. Po ju kthej brenda {{seconds}}.",
-  "continue": "Vazhdo",
+  "continue_test": "Vazhdo",
   "go_back": "Kthehu Prapa",
   "content_warning_setting_blurb": "Vendosja e një paralajmërimi për përmbajtjen do të shfaqë një kërkesë me paralajmërimin e përmbajtjes duke i kërkuar përdoruesit pëlqimin për të vazhduar.",
   "user_moderation_history": "Historia e Moderimit të {{user}}",
