--- a/translations/sv.json
+++ b/translations/sv.json
@@ -37,7 +37,7 @@
     "sticky": "fastnålad",
     "unsticky": "inte fastnålad",
     "link": "länk",
-    "mod": "moderator",
+    "mod_test": "moderator",
     "mods": "moderatorer",
     "moderates": "Modererar",
     "settings": "Inställningar",
@@ -97,7 +97,7 @@
     "inbox": "Inkorg",
     "inbox_for": "Inkorg tillhörande <1>{{user}}</1>",
     "mark_all_as_read": "markera alla som lästa",
-    "type": "Typ",
+    "type_test": "Typ",
     "unread": "Oläst",
     "reply_sent": "Svar skickat",
     "search": "Sök",
