--- a/translations/th.json
+++ b/translations/th.json
@@ -99,9 +99,9 @@
   "create_private_message": "สร้างข้อความส่วนตัว",
   "avatar": "รูปประจำตัว",
   "unban": "ยกเลิกแบน",
-  "type": "ชนิด",
+  "type_test": "ชนิด",
   "report_too_long": "รายงานยาวเกินไป",
-  "mod": "ผู้จัดการ",
+  "mod_test": "ผู้จัดการ",
   "quote": "คำพูด",
   "list_of_communities": "รายการชุมชน",
   "show_scores": "แสดงคะแนน",
