--- a/translations/tr.json
+++ b/translations/tr.json
@@ -42,7 +42,7 @@
   "sorting_help": "sıralama yardımı",
   "view_source": "Kaynağı görüntüle",
   "link": "Bağlantı",
-  "mod": "mod",
+  "mod_test": "mod",
   "mods": "modlar",
   "settings": "Ayarlar",
   "site_config": "Site Yapılandırması",
@@ -102,7 +102,7 @@
   "docs": "Belgeler",
   "inbox": "Gelen kutusu",
   "mark_all_as_read": "hepsini okundu işaretle",
-  "type": "Tür",
+  "type_test": "Tür",
   "unread": "Okunmamış",
   "replies": "Yanıtlar",
   "mentions": "Bahsetmeler",
@@ -624,7 +624,7 @@
   "block_urls_placeholder": "Engellenen URL'leri buraya her satıra bir tane gelecek şekilde koyun. Regex dizeleri de çalışır, ör: *.example.com",
   "content_warning": "İçerik Uyarısı",
   "sending_back_message": "Tamam 👍. {{seconds}} saniye içinde geri gönderiliyorsunuz.",
-  "continue": "Devam Et",
+  "continue_test": "Devam Et",
   "go_back": "Geri Git",
   "content_warning_setting_blurb": "Bir içerik uyarısı ayarlamak, kullanıcıya devam etmek için onayını isteyen bir içerik uyarısı istemi gösterecektir.",
   "language_not_allowed": "Dile izin verilmiyor",
