--- a/translations/uk.json
+++ b/translations/uk.json
@@ -44,7 +44,7 @@
   "unlock": "Розблокувати",
   "lock": "Заблокувати",
   "link": "посилання",
-  "mod": "модератор",
+  "mod_test": "модератор",
   "mods": "модератори",
   "moderates": "Модерує",
   "settings": "Налаштування",
@@ -103,7 +103,7 @@
   "inbox": "Вхідні",
   "inbox_for": "Вхідні повідомлення для <1>{{user}}</1>",
   "mark_all_as_read": "позначити усе як прочитане",
-  "type": "Різновид",
+  "type_test": "Різновид",
   "unread": "Не прочитано",
   "reply_sent": "Відповідь відправлено",
   "search": "Пошук",
