--- a/translations/vi.json
+++ b/translations/vi.json
@@ -72,7 +72,7 @@
     "quote": "Trích dẫn",
     "spoiler": "Nội dung ẩn",
     "list": "Liệt kê",
-    "mod": "quản trị viên",
+    "mod_test": "quản trị viên",
     "mods": "Kiểm duyệt viên",
     "moderates": "Kiểm duyệt viên của",
     "settings": "Cài đặt",
@@ -170,7 +170,7 @@
     "couldnt_resolve_report": "Không thể giải quyết báo cáo.",
     "inbox_for": "Nhắn tin cho <1>{{user}}</1>",
     "mark_all_as_read": "đánh dấu tất cả là đã đọc",
-    "type": "Loại",
+    "type_test": "Loại",
     "unread": "Chưa đọc",
     "replies": "Trả lời",
     "mentions": "Lượt nhắc",
