--- a/translations/zh_Hans.json
+++ b/translations/zh_Hans.json
@@ -98,7 +98,7 @@
   "quote": "引用",
   "spoiler": "剧透折叠",
   "list": "列表",
-  "mod": "社群管理",
+  "mod_test": "社群管理",
   "mods": "社群管理",
   "moderates": "管理",
   "settings": "设置",
@@ -174,7 +174,7 @@
   "inbox": "收件箱",
   "inbox_for": "<1>{{user}}</1> 的收件箱",
   "mark_all_as_read": "全部标为已读",
-  "type": "类型",
+  "type_test": "类型",
   "unread": "未读",
   "replies": "回复",
   "mentions": "提及",
@@ -661,7 +661,7 @@
   "block_urls": "屏蔽 URL",
   "content_warning": "内容警告",
   "sending_back_message": "好的 👍。将在 {{seconds}} 秒后把你跳转回之前页面。",
-  "continue": "继续",
+  "continue_test": "继续",
   "go_back": "返回",
   "user_moderation_history": "对 {{user}} 的管理记录",
   "comment_moderation_history": "评论的管理操作记录",
