--- a/translations/zh_Hant.json
+++ b/translations/zh_Hant.json
@@ -104,7 +104,7 @@
   "quote": "引用",
   "spoiler": "防雷",
   "list": "列表",
-  "mod": "版主",
+  "mod_test": "版主",
   "mods": "版主",
   "settings": "設定",
   "admin_settings": "管理員設定",
@@ -328,7 +328,7 @@
   "top": "熱門",
   "api": "API",
   "inbox": "收件匣",
-  "type": "類型",
+  "type_test": "類型",
   "unread": "未讀",
   "replies": "回覆",
   "prev": "上一頁",
@@ -676,7 +676,7 @@
   "block_urls_placeholder": "請將您想封鎖的網址逐行輸入，每行一個網址。正規表達式字串也適用，例如 *.example.com",
   "content_warning": "內容警告",
   "sending_back_message": "好的 👍，{{seconds}} 秒後將帶您返回。",
-  "continue": "繼續",
+  "continue_test": "繼續",
   "go_back": "回上一頁",
   "content_warning_setting_blurb": "設定內容警告會顯示提示，提醒使用者有相關警告內容，並詢問是否同意繼續瀏覽。",
   "user_moderation_history": "{{user}} 的管理紀錄",
