--- a/translations/hr.json
+++ b/translations/hr.json
@@ -137,7 +137,7 @@
   "list": "Popis",
   "card": "Kartica",
   "small_card": "Mala kartica",
-  "mod": "mod",
+  "mod_test": "mod",
   "mods": "modovi",
   "distinguish": "Govori kao moderator",
   "undistinguish": "Govori kao korisnik",
@@ -333,7 +333,7 @@
   "inbox": "Pristigla pošta",
   "inbox_for": "Pristigla pošta za <1>{{user}}</1>",
   "mark_all_as_read": "označi sve kao pročitano",
-  "type": "Vrsta",
+  "type_test": "Vrsta",
   "read": "Pročitano",
   "unread": "Nepročitano",
   "replies": "Odgovori",
@@ -768,7 +768,7 @@
   "block_urls_placeholder": "Ovdje stavite blokirane URL-ove, jedan URL po retku. Radi i Regex, npr. *.example.com",
   "content_warning": "Upozorenje o sadržaju",
   "sending_back_message": "U redu 👍. Vraćam vas za {{seconds}} sekundi.",
-  "continue": "Nastavi",
+  "continue_test": "Nastavi",
   "go_back": "Idi natrag",
   "content_warning_setting_blurb": "Postavljanje upozorenja o sadržaju prikazat će upit s upozorenjem o sadržaju tražeći pristanak korisnika za nastavak.",
   "user_moderation_history": "Povijest moderiranja korisnika {{user}}",
